# yubal

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  cliff.toml  compose.yaml  docker-entrypoint.sh  entrypoint.sh  justfile  mise.ci.toml  mise.toml  package.json  pyproject.toml
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml  extension-cd.yaml  extension-ci.yaml  extension-release.yaml
app/: cli.py  config.py  constants.py
app/cli/: __init__.py  app.py  doctor.py  info.py  sync.py  tag.py  utils.py  version.py
app/services/: downloader.py  tagger.py
beets/: config.yaml
config/: beets_config.yaml  library.db  spotify_token.json
deploy/: .env.example  compose.yaml
docs/: playlist-implementation-plan.md  playlist-support-poc.md  test-urls.md  urls.md
docs/plans/: 2025-01-27-subscriptions-api-design.md  2025-01-27-subscriptions-implementation.md
docs/tagging/: multi-artist-conclusions.md  multi-artist-research.md  multi-artist-tagging.md  poc_multi_artist_tagging_final.py  poc_multi_artist_tagging_v1_mock.py  poc_multi_artist_tagging_v2_realfiles.py
docs/urls/: test-urls.md
e2e/: package.json  playwright.config.ts
e2e/tests/: base-path.spec.ts
extension/: .prettierignore  PRIVACY_POLICY.md  README.md  SOURCE_CODE_REVIEW.md  cliff.toml  eslint.config.js  justfile  mise.toml  package.json  wxt.config.ts
extension/assets/: index.css
extension/components/: action-button.ts  connection-error-page.ts  connection-error-view.ts  footer.ts  header.ts  loading-page.ts  not-youtube-view.ts  setup-page.ts  setup-view.ts  unsupported-url-page.ts  youtube-page.ts  youtube-view.ts
extension/entrypoints/: background.ts
extension/entrypoints/popup/: index.html  main.ts
extension/lib/: api.ts  icons.ts  raw-html.ts  storage.ts  ui.ts  youtube.ts
scripts/: generate_openapi.py  get_playlist.py  get_song.py  sync-beets-config.py
scripts/ytmusicapi/: get_album.py  get_watch_playlist.py  search.py
tests/: test_downloader.py  test_exceptions.py  test_factory.py  test_filename.py  test_models.py  test_services.py
tests/unit/: test_enums.py  test_job_store.py  test_models.py
web/: eslint.config.js  index.html  package.json  vite.config.ts
web/src/: App.tsx  hero.ts  index.css  main.tsx  router.tsx
web/src/api/: album.ts  client.ts  errors.ts  jobs.ts  schema.d.ts  search.ts  song-related.ts  subscriptions.test.ts  subscriptions.ts
web/src/components/: ConsoleOutput.tsx  ConsolePanel.tsx  DownloadHistory.tsx  DownloadsPanel.tsx  Footer.tsx  Header.tsx  JobCard.tsx  Panel.tsx  UrlInput.tsx  album-panel.tsx  console-panel.tsx  downloads-panel.tsx  search-results-panel.tsx  song-related-panel.tsx  url-input.tsx
web/src/components/common/: JobCard.tsx  download-indicator.tsx  empty-state.tsx  error-boundary.tsx  hover-fade.tsx  job-card.tsx  panel.tsx  url-input.tsx
web/src/components/console/: log-renderers.tsx
web/src/components/icons/: index.tsx
web/src/components/layout/: footer.tsx  header.tsx
web/src/components/magicui/: animated-theme-toggler.tsx  blur-fade.tsx
web/src/components/subscriptions/: subscription-card.tsx  subscriptions-panel.tsx
web/src/components/ui/: Panel.tsx
web/src/features/console/: console-panel.tsx  log-line.tsx  use-logs.ts
web/src/features/cookies/: cookie-dropdown.tsx  use-cookies.ts
web/src/features/downloads/: downloads-panel.tsx  job-card.tsx  jobs-context.tsx  url-input.tsx  use-jobs.ts
web/src/features/jobs/: job-card.tsx  use-jobs.ts
web/src/features/logs/: log-line.tsx  logs-panel.tsx  use-logs.ts
web/src/hooks/: use-album.ts  use-cookies.ts  use-countdown.ts  use-hover.ts  use-jobs.ts  use-local-storage.ts  use-logs.ts  use-schedule-countdown.ts  use-search-suggestions.ts  use-search.ts  use-song-related.ts  use-subscriptions.ts  use-theme.tsx  use-version-check.ts  useJobs.ts  useTheme.ts  useTheme.tsx
web/src/lib/: base-path.ts  format.ts  job-status.test.ts  job-status.ts  toast.ts  url.test.ts  url.ts
web/src/pages/: downloads.tsx  jobs.tsx  subscriptions.tsx  sync.tsx
ytmeta/: __init__.py  cli.py  client.py  config.py  exceptions.py  extractor.py  ytmusic_models.py
ytmeta/models/: __init__.py  domain.py  ytmusic.py
ytmeta/services/: __init__.py  downloader.py  extractor.py
ytmeta/utils/: __init__.py  filename.py
yubal/: __main__.py
yubal/api/: __init__.py  app.py  dependencies.py  exceptions.py
yubal/api/routes/: __init__.py  cookies.py  health.py  jobs.py  sync.py
yubal/cli/: __init__.py  app.py  doctor.py  download.py  import_cmd.py  info.py  nuke.py  serve.py  sync.py  tag.py  utils.py  version.py
yubal/config/: config.yaml
yubal/core/: __init__.py  config.py  models.py  progress.py  types.py
yubal/schemas/: __init__.py  progress.py  sync.py
yubal/services/: __init__.py  downloader.py  file_organizer.py  job_executor.py  job_store.py  m3u_generator.py  metadata_patcher.py  sync.py  tagger.py
yubal/services/sync/: __init__.py  album.py  cancel.py  playlist.py  progress.py
(+4 files in other folders)
