[project]
name = "ytmeta"
version = "0.1.0"
description = "Extract metadata from YouTube Music playlists using ytmusicapi"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0",
  "ytmusicapi>=1.9.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "yt-dlp>=2025.12.8",
  "pathvalidate>=3.2.0",
  "unidecode>=1.3.0",
]

[project.scripts]
ytmeta = "ytmeta.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ytmeta"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "RUF"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
