[project]
name = "yubal-workspace"
version = "0.2.2"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
yubal = { workspace = true }

[dependency-groups]
dev = ["ruff>=0.14.11", "ty>=0.0.11", "pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "RUF", "ANN"]
ignore = ["ANN401"]                                    # Allow Any for pydantic validators

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
addopts = "--tb=short"
